try to fix sessions later

--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -14,7 +14,6 @@ body {
     height: 100%;
     left: 0;
     top: 0;
-    background-color: #4f4f4f;
     overflow: hidden;
     z-index: -2;
 }
@@ -27,7 +26,8 @@ body {
     left: 50%;
     background-size: 550px;
     background-position: -100px -100px;
-    opacity: 0.075;
+    background-image: url(/content/background.png);
+    opacity: 0.1;
     transform: translate(-50%, -50%) rotate(15deg);
 }
 
