--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -167,7 +167,7 @@ div {
 
 .logo-text {
     font-size: 7.3vh;
-    font-family: 'Titan One', sans-serif;
+    font-family: "Titan One", sans-serif;
     text-shadow: 2px 2px 8px rgb(128, 128, 128);
     color: #fff;
 }
