--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -45,103 +45,129 @@ body {
     align-items: center;
 }
 
-.loader-blook {
-    width: 3.5%;
-    -o-object-fit: contain;
-    object-fit: contain;
-    overflow-y: none;
-    filter: drop-shadow(0px 0px 5px #000000);
-    animation: loading 2s linear infinite;
+.loader-container {
+    height: 50px;
+    margin-bottom: 30px;
+    position: relative;
+    width: 100%;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
-@keyframes loading {
-    4.25% {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
+.loader {
+    /*left: calc(50% - 17.5px);
+    position: absolute;
+    top: calc(50% - 20.125px)*/
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(2);
+}
+
+.loader-blook {
+    -webkit-animation: loader-blook 3s linear infinite;
+    animation: loader-blook 3s linear infinite;
+    /*left: 7.5px;*/
+    position: absolute;
+    /*top: 0;*/
+    -webkit-transform-origin: 50% 56.5%;
+    transform-origin: 50% 56.5%;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 35px
+}
+
+@keyframes loader-blook {
+    0% {
+        transform: translateY(10.5px) rotate(0deg)
     }
 
-    6.25% {
-        transform: translateY(9px) rotate(22.5deg);
+    10% {
+        transform: translateY(0) rotate(0deg)
     }
 
-    12.5% {
-        transform: translateY(18px) scaleY(0.9) rotate(45deg);
-        border-bottom-right-radius: 37.5px;
-    }
-
-    18.75% {
-        transform: translateY(9px) rotate(67.5deg);
+    15% {
+        transform: translateY(0) rotate(90deg)
     }
 
     25% {
-        transform: translateY(0) rotate(90deg);
+        transform: translateY(10.5px) rotate(90deg)
     }
 
-    29.25% {
-        border-bottom-right-radius: 4px;
-        border-top-right-radius: 4px;
+    35% {
+        transform: translateY(0) rotate(90deg)
     }
 
-    31.25% {
-        transform: translateY(9px) rotate(112.5deg);
-    }
-
-    37.5% {
-        transform: translateY(18px) scaleY(0.9) rotate(135deg);
-        border-top-right-radius: 37.5px;
-    }
-
-    43.75% {
-        transform: translateY(9px) rotate(157.5deg);
+    40% {
+        transform: translateY(0) rotate(180deg)
     }
 
     50% {
-        transform: translateY(0) rotate(180deg);
+        transform: translateY(10.5px) rotate(180deg)
     }
 
-    54.25% {
-        border-top-right-radius: 4px;
-        border-top-left-radius: 4px;
+    60% {
+        transform: translateY(0) rotate(180deg)
     }
 
-    56.25% {
-        transform: translateY(9px) rotate(202.5deg);
-    }
-
-    62.5% {
-        transform: translateY(18px) scaleY(0.9) rotate(225deg);
-        border-top-left-radius: 37.5px;
-    }
-
-    68.75% {
-        transform: translateY(9px) rotate(247.5deg);
+    65% {
+        transform: translateY(0) rotate(270deg)
     }
 
     75% {
-        border-top-left-radius: 4px;
-        transform: translateY(0) rotate(270deg);
+        transform: translateY(10.5px) rotate(270deg)
     }
 
-    79.25% {
-        border-bottom-left-radius: 4px;
+    85% {
+        transform: translateY(0) rotate(270deg)
     }
 
-    81.25% {
-        transform: translateY(9px) rotate(292.5deg);
-    }
-
-    87.5% {
-        transform: translateY(18px) scaleY(0.9) rotate(315deg);
-        border-bottom-left-radius: 37.5px;
-    }
-
-    93.75% {
-        transform: translateY(9px) rotate(337.5deg);
+    90% {
+        transform: translateY(0) rotate(1turn)
     }
 
     to {
-        transform: translateY(0) rotate(1turn);
+        transform: translateY(10.5px) rotate(1turn)
     }
+}
+
+.loader-shadow {
+    -webkit-animation: loader-shadow .75s linear infinite;
+    animation: loader-shadow .75s linear infinite;
+    background: rgba(0, 0, 0, 0.75);
+    border-radius: 20px;
+    height: 6px;
+    /*left: 5px;*/
+    opacity: .2;
+    position: absolute;
+    /*top: 48px;*/
+    top: 28px;
+    width: 40px
+}
+
+@keyframes loader-shadow {
+    0% {
+        transform: scale(1)
+    }
+
+    40% {
+        transform: scaleX(1.2)
+    }
+
+    60% {
+        transform: scaleX(1.2)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+.loader-message {
+    margin-top: 135px;
+    font-size: 25px;
+    color: white;
 }
 
 .toast-message {
