--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -5,7 +5,11 @@ body {
     font-family: Nunito, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    color: #fff
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .background {
