--- a/src/styles/authentication.module.css
+++ b/src/styles/authentication.module.css
@@ -1,3 +1,31 @@
+.container {
+    background-color: var(--primary-color);
+    border-radius: 7px;
+    box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    left: 50%;
+    max-width: 420px;
+    padding-bottom: 7px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 90%
+}
+
+.container-header {
+    color: var(--accent-color);
+    font-family: Titan One, sans-serif;
+    font-size: 55px;
+    margin: 10px 20px 20px;
+    text-align: center;
+    font-size: 50px;
+    line-height: 54px
+}
+
 .input-container {
     align-items: center;
     border: 2px solid var(--background-color);
@@ -66,156 +94,31 @@
     color: var(--accent-color);
 }
 
-.container {
-    background-color: var(--primary-color);
-    border-radius: 7px;
-    box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    left: 50%;
-    max-width: 420px;
-    padding-bottom: 7px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 90%
-}
-
-.container-header {
-    color: #fff;
-    font-family: Titan One, sans-serif;
-    font-size: 55px;
-    margin: 10px 20px 20px;
-    text-align: center;
-    font-size: 50px;
-    line-height: 54px
-}
-
 .button {
-    background-color: var(--background-color);
-    border-color: rgba(255, 255, 255, 0.25);
+    background-color: var(--primary-color);
+    border-color: var(--background-color);
     border-radius: 6px;
     border-style: solid;
-    color: #fff;
+    color: var(--accent-color);
+    opacity: .75;
     cursor: pointer;
     display: block;
     font-family: Nunito, sans-serif;
     font-size: 22px;
-    height: 45px;
     margin: auto auto 20px;
     outline: none;
     padding: 5px 20px;
     text-align: center;
-    transition: all .2s cubic-bezier(.39, .5, .15, 1.36)
+    transition: .2s;
 }
 
 .button:focus,
 .button:hover {
-    border-color: var(--accent-color);
-    color: #fff
-}
-
-.buttonFilled__SfrFE {
-    border-color: #3a3a3a;
-    color: #3a3a3a;
-    font-weight: 700
-}
-
-.buttonError,
-.buttonError:focus {
-    border-color: #ce1313;
-    color: #fff
-}
-
-.buttonError:hover {
-    border-color: var(--accent-color);
-    color: #fff
-}
-
-.blErrorContainer {
-    align-items: center;
-    border: 2px solid #ce1313;
-    border-radius: 6px;
-    display: flex;
-    flex-direction: row;
-    margin: auto auto 20px;
-    max-width: 330px;
-    width: 80%
-}
-
-.blErrorIcon {
-    color: #ce1313;
-    height: 20px;
-    margin-left: 13px;
-    margin-right: 13px;
-    min-width: 20px;
-    -webkit-user-select: none;
-    user-select: none;
-    width: 20px
-}
-
-.blErrorText {
-    color: #fff;
-    font-family: Nunito, sans-serif;
-    font-size: 16px;
-    margin: 8px 5px 5px;
-    text-align: left
-}
-
-.checkBox {
-    align-items: center;
-    background-color: #fff;
-    border: 2px solid #3a3a3a;
-    border-radius: 6px;
-    color: #3a3a3a;
-    cursor: pointer;
-    display: flex;
-    font-size: 16px;
-    height: 24px;
-    justify-content: center;
-    min-width: 24px;
-    outline: none;
-    -webkit-user-select: none;
-    user-select: none;
-    width: 24px;
-    transition: .2s; 
-}
-
-.checkBox:hover {
-    transform: scale(1.1) rotate(-2deg);
-}
-
-.checkBox:active {
-    transform: scale(0.9) rotate(0deg);
-}
-
-.checkYes {
-    background-color: var(--primary-color);
     border-color: var(--secondary-color);
-    color: var(--accent-color)
+    opacity: 1;
 }
 
-.checkNo {
-    background-color: var(--primary-color);
-    border-color: var(--secondary-color);
-    color: var(--primary-color)
-}
-
-.checkError {
-    background-color: var(--primary-color);
-    border-color: #ce1313;
-    color: var(--primary-color)
-}
-
-.checkIcon {
-    text-align: center;
-    width: 16px
-}
-
-.agreeHolder {
+.agree-holder {
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -225,7 +128,7 @@
     width: 80%
 }
 
-.agreeText {
+.agree-text {
     color: #fff;
     font-family: Nunito, sans-serif;
     font-size: 14px;
@@ -238,6 +141,68 @@
     color: var(--accent-color);
 }
 
-.buttonError {
-    border-color: #ce1313
+.check-box {
+    align-items: center;
+    border: 2px solid;
+    border-color: var(--background-color);
+    border-radius: 6px;
+    color: var(--accent-color);
+    cursor: pointer;
+    display: flex;
+    font-size: 16px;
+    height: 24px;
+    justify-content: center;
+    min-width: 24px;
+    outline: none;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 24px;
+    transition: .2s;
+}
+
+.check-box:hover {
+    border-color: var(--secondary-color);
+}
+
+.check-yes {
+    color: var(--accent-color);
+}
+
+.check-no {
+    color: var(--primary-color);
+}
+
+.check-icon {
+    text-align: center;
+    width: 16px
+}
+
+.error-container {
+    align-items: center;
+    border: 2px solid #ce1313;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    margin: auto auto 20px;
+    max-width: 330px;
+    width: 80%
+}
+
+.error-icon {
+    color: #ce1313;
+    height: 18px;
+    margin-left: 13px;
+    margin-right: 13px;
+    min-width: 20px;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 20px;
+}
+
+.error-text {
+    color: #fff;
+    font-family: Nunito, sans-serif;
+    font-size: 16px;
+    margin: 5px 5px 5px;
+    text-align: left;
 }
