--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,19 +1,3 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-body,
-div {
-    font-family: "Nunito", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: var(--accent-color)fff;
-}
-
 .header-container {
     height: 100vh;
     width: 100%;
@@ -198,14 +182,14 @@ div {
     }
 }
 
-.welcome-desc {
+.welcome-description {
     font-size: 3.35vh;
     margin: 3vh 0;
     color: var(--accent-color);
 }
 
 @media only screen and (max-width: 1050px) {
-    .welcome-desc {
+    .welcome-description {
         font-size: 2.2vh;
         margin: 1.5vh 0 3vh;
     }
