forgot half the stuff i did but starting to finally work on frontend

--- a/src/styles/all.module.scss
+++ b/src/styles/all.module.scss
@@ -191,6 +191,15 @@ body {
     top: 55px; */
 }
 
+.sidebar-body {
+    position: absolute;
+    top: 0;
+    left: calc(50% + 110px);
+    width: calc(100% - 220px);
+    height: 100%;
+    transform: translateX(-50%);
+}
+
 .loading-modal {
     display: flex;
     position: fixed;
@@ -260,122 +269,122 @@ body {
     width: 100%;
     user-select: none;
     -webkit-user-select: none;
-}
 
-.loader {
-    /* left: calc(50% - 17.5px);
-    position: absolute;
-    top: calc(50% - 20.125px) */
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: scale(2);
-}
+    .loader {
+        /* left: calc(50% - 17.5px);
+        position: absolute;
+        top: calc(50% - 20.125px) */
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform: scale(2);
 
-.loader-blook {
-    -webkit-animation: loader-blook 3s linear infinite;
-    animation: loader-blook 3s linear infinite;
-    // left: 7.5px;
-    position: absolute;
-    // top: 0;
-    -webkit-transform-origin: 50% 56.5%;
-    transform-origin: 50% 56.5%;
-    -webkit-user-select: none;
-    user-select: none;
-    width: 35px
-}
+        .loader-blook {
+            -webkit-animation: loader-blook 3s linear infinite;
+            animation: loader-blook 3s linear infinite;
+            // left: 7.5px;
+            position: absolute;
+            // top: 0;
+            -webkit-transform-origin: 50% 56.5%;
+            transform-origin: 50% 56.5%;
+            -webkit-user-select: none;
+            user-select: none;
+            width: 35px;
 
-@keyframes loader-blook {
-    0% {
-        transform: translateY(10.5px) rotate(0deg);
+            @keyframes loader-blook {
+                0% {
+                    transform: translateY(10.5px) rotate(0deg);
+                }
+
+                10% {
+                    transform: translateY(0) rotate(0deg);
+                }
+
+                15% {
+                    transform: translateY(0) rotate(90deg);
+                }
+
+                25% {
+                    transform: translateY(10.5px) rotate(90deg);
+                }
+
+                35% {
+                    transform: translateY(0) rotate(90deg);
+                }
+
+                40% {
+                    transform: translateY(0) rotate(180deg);
+                }
+
+                50% {
+                    transform: translateY(10.5px) rotate(180deg);
+                }
+
+                60% {
+                    transform: translateY(0) rotate(180deg);
+                }
+
+                65% {
+                    transform: translateY(0) rotate(270deg);
+                }
+
+                75% {
+                    transform: translateY(10.5px) rotate(270deg);
+                }
+
+                85% {
+                    transform: translateY(0) rotate(270deg);
+                }
+
+                90% {
+                    transform: translateY(0) rotate(1turn);
+                }
+
+                to {
+                    transform: translateY(10.5px) rotate(1turn);
+                }
+            }
+
+            .loader-shadow {
+                -webkit-animation: loader-shadow .75s linear infinite;
+                animation: loader-shadow .75s linear infinite;
+                background: rgba(0, 0, 0, 0.75);
+                border-radius: 20px;
+                height: 6px;
+                // left: 5px;
+                opacity: .2;
+                position: absolute;
+                // top: 48px;
+                top: 28px;
+                width: 40px;
+
+                @keyframes loader-shadow {
+                    0% {
+                        transform: scale(1);
+                    }
+
+                    40% {
+                        transform: scaleX(1.2);
+                    }
+
+                    60% {
+                        transform: scaleX(1.2);
+                    }
+
+                    to {
+                        transform: scale(1);
+                    }
+                }
+            }
+        }
     }
 
-    10% {
-        transform: translateY(0) rotate(0deg);
+    .loader-message {
+        margin-top: 135px;
+        font-size: 25px;
+        color: var(--accent-color);
     }
-
-    15% {
-        transform: translateY(0) rotate(90deg);
-    }
-
-    25% {
-        transform: translateY(10.5px) rotate(90deg);
-    }
-
-    35% {
-        transform: translateY(0) rotate(90deg);
-    }
-
-    40% {
-        transform: translateY(0) rotate(180deg);
-    }
-
-    50% {
-        transform: translateY(10.5px) rotate(180deg);
-    }
-
-    60% {
-        transform: translateY(0) rotate(180deg);
-    }
-
-    65% {
-        transform: translateY(0) rotate(270deg);
-    }
-
-    75% {
-        transform: translateY(10.5px) rotate(270deg);
-    }
-
-    85% {
-        transform: translateY(0) rotate(270deg);
-    }
-
-    90% {
-        transform: translateY(0) rotate(1turn);
-    }
-
-    to {
-        transform: translateY(10.5px) rotate(1turn);
-    }
-}
-
-.loader-shadow {
-    -webkit-animation: loader-shadow .75s linear infinite;
-    animation: loader-shadow .75s linear infinite;
-    background: rgba(0, 0, 0, 0.75);
-    border-radius: 20px;
-    height: 6px;
-    // left: 5px;
-    opacity: .2;
-    position: absolute;
-    // top: 48px;
-    top: 28px;
-    width: 40px
-}
-
-@keyframes loader-shadow {
-    0% {
-        transform: scale(1);
-    }
-
-    40% {
-        transform: scaleX(1.2);
-    }
-
-    60% {
-        transform: scaleX(1.2);
-    }
-
-    to {
-        transform: scale(1);
-    }
-}
-
-.loader-message {
-    margin-top: 135px;
-    font-size: 25px;
-    color: var(--accent-color);
 }
 
 .toast-message {
